# txline

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/txline/: Cargo.toml  README.md
crates/txline/examples/: devnet_subscription_scores_1stat.rs  devnet_subscription_scores_v2.rs  devnet_subscription_scores_v2a.rs
crates/txline/examples/devnet_stat_v2_common/: mod.rs
crates/txline/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs
crates/txline/src/http/: fixtures.rs  mod.rs  models.rs  odds.rs  scores.rs
crates/txline/src/solana/: idl.rs  mod.rs  pda.rs  purchase.rs  subscription.rs  transaction_safety.rs  validation.rs
crates/txline/src/stream/: mod.rs  odds.rs  scores.rs  sse.rs
crates/txline/src/validation/: legacy.rs  mod.rs  proof.rs  strategy.rs  v2.rs
crates/txline/tests/: activation.rs  devnet_blackbox.rs  pda.rs  proof_decode.rs  validation.rs
crates/txline/tests/fixtures/: README.md  generate_trading_golden.js  generate_validation_golden.js  trading_golden.devnet.json  validation_golden.devnet.json
docs/: architecture.md  devnet-first.md  devnet-idl-coverage.md  releasing.md  security.md  validation.md
go/: README.md
python/: NOTES.md  README.md  pyproject.toml
python/src/txline/: auth.py
python/src/txline/solana/: pda.py
python/src/txline/validation/: proof.py
typescript/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.eslint.json  vitest.config.ts
typescript/scripts/: verify-package.mjs
typescript/src/: client.ts  config.ts  tradingLifecycle.ts
typescript/src/http/: fixtures.ts  request.ts  scores.ts
typescript/src/solana/: codec.ts  faucet.ts  pda.ts  purchase.ts  subscription.ts  token2022.ts  trading.ts  transactionSafety.ts  validation.ts
typescript/src/stream/: sse.ts
typescript/src/validation/: legacy.ts  proof.ts  strategy.ts  v2.ts
typescript/tests/: core.test.ts  solana-golden.test.ts  stream.test.ts  trading-lifecycle.test.ts  validation.test.ts
