[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "txline"
version = "0.4.0"
description = "Devnet-first Python SDK for TxLINE REST, SSE, validation, and Solana instruction builders."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
authors = [{ name = "TxLINE SDK contributors" }]
dependencies = [
  "cryptography>=42",
  "httpx>=0.27,<1",
]

[project.urls]
Repository = "https://github.com/Berektassuly/txline"
Issues = "https://github.com/Berektassuly/txline/issues"

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.9.4",
  "build>=1.2",
  "mypy>=1.20",
  "pip-audit>=2.10.1",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=7.1",
  "ruff>=0.15",
  "twine>=6.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/txline"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"src/txline/auth.py" = ["S105"]
"src/txline/solana/pda.py" = ["S105"]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["txline"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
